# SyncTemplate

./: CMakeLists.txt  README.md  package.xml
launch/: all_talk.launch  example.launch  main.launch  rto_derp.launch
msg/: TwoScalarMsg.msg  all_info.msg  dana_msg.msg  rto_derp_msg.msg
scripts/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  counter.py  main.py  master.py  rto_derp.py  slave.py
